Bug 1322145 - Bug 1316570 follow-up: Fixed error handling in loop which processes signature content. r=mkmelin